<resources>
    <string name="app_name">Components And Login</string>
    <string name="login_page_label_user">Kullanıcı Adı</string>
    <string name="login_page_txt_user">lütfen kullanıcı adınızı giriniz...</string>
    <string name="login_page_label_password">Şifre</string>
    <string name="login_page_txt_password">Şifrenizi giriniz...</string>
    <string name="login_page_btn_giris">Giriş</string>
    <string name="login_page_label_info">Hala üye değil misin?</string>
    <string name="login_page_label_register">Kaydol</string>
    <string name="title_activity_main_navbar">MainActivity_Navbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>